--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,5 +24,8 @@ jobs:
             dep ensure
         fi
 
-    - name: Build
-      run: go build -v .
+    # - name: Build
+    #   run: go build -v .
+
+    - name: Build with Make
+      run: make build
